2007-11-11  Rodney Dawes  <dobey.pwns@gmail.com>

	* scalable/emotes/face-uncertain.svg:
	Add a scalable face-uncertain icon as it's now in the spec

2007-10-17  Lapo Calamandrei <calamandrei@gmail.com>

	* Added Ulisse to AUTHORS file (how can it be he wasn't there
		already?!)

2007-10-04  Lapo Calamandrei <calamandrei@gmail.com>

	* {22x22,32x32}/actions/window-close.*: better shadows.

2007-09-26  Jakub Steiner <jimmac@ximian.com>

	* 16x16/actions/window-close: make symmetric. fixes bug #480338

2007-09-22  Lapo Calamandrei <calamandrei@gmail.com>

	* better metaphor for status/dialog-password. Icons based on Ulisse's
		key.

2007-09-21  Lapo Calamandrei <calamandrei@gmail.com>

	* new 16x16 drive-* more similar to the big ones, not sure if better
		or worse tho.

2007-09-13  Rodney Dawes  <dobey.pwns@gmail.com>

	* index.theme.in: add missing directories for emotes
	Original patch from Erwann Chenede <Erwann.Chenede@Sun.COM>

2007-09-06  Jakub Steiner <jimmac@ximian.com>

	* status/folder-visiting.icon: fix emblem anchors to match the ones
		in folder.icon to avoid jumpiness. Bug #474165

2007-09-04  Jakub Steiner <jimmac@ximian.com>

	* {16x16,24x24,48x48}/apps/gnome-logout.png: replaced by
		system-log-out

2007-09-02  Rodney Dawes  <dobey.pwns@gmail.com>

	* MAINTAINERS: Update

2007-08-27  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Up version to 2.19.91 for release

2007-08-27  Rodney Dawes  <dobey.pwns@gmail.com>

	* scalable/emblems/Makefile.am: Add missing .icon.in files

	* */*/*.svg: inkscape -z --vacuum-defs

2007-08-27  Rodney Dawes  <dobey.pwns@gmail.com>

	* */places/Makefile.am: Include folder.icon if not already present

	* */places/folder.icon: Update emblem positioning and add missing sizes

2007-08-27  Lapo Calamandrei <calamandrei@gmail.com>

	* */actions/system-log-out.* : new icons from Kalle Persson.
	* {32x32,scalable}/categories/system-help.* : last missing bits to
		complete "categories".