@@ -1,3 +1,8 @@
+2007-11-19  Lapo Calamandrei <calamandrei@gmail.com>
+
+	* 22x22/categories/system-help : tweaks.
+	* renamed face-smile-big to face-laugh.
+
 2007-11-11  Rodney Dawes  <dobey.pwns@gmail.com>
 
 	* scalable/emotes/face-uncertain.svg:
